fix wrap

--- a/web-2/css/main.css
+++ b/web-2/css/main.css
@@ -373,7 +373,8 @@
 }
 
 .table div.zaisliferecom {
-
+    overflow: visible;
+    white-space: normal;
 }
 
 .table tbody td.expand {
